# fuoye_group_4_weather_app

./: CMakeLists.txt  Makefile  README.md  main.c
data/: city.js
lib/: jsmn.c
src/: check_json_string.c  get_weather_data.c  parse_json.c  print_weather_data.c  read_file.c  search_city.c
src/include/: Buffer.h  Parsed_Json.h  check_json_string.h  get_weather_data.h  parse_json.h  print_weather_data.h  read_file.h  search_city.h
